--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,29 @@ body {
     /*height: 90px;*/
 }
 
+.category-card {
+
+}
+
+.image-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    grid-template-rows: repeat(2, minmax(90px, 90px)); /* 2 rows */
+    gap: 10px;
+    max-width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image fills the container while maintaining aspect ratio */
+    border-radius: 8px;
+}
+
+
+
 .loader {
     width: 45px;
     aspect-ratio: 0.75;
